<?xml version="1.0" encoding="utf-8"?><!-- 热烈庆祝中华人民共和国成立70周年 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/history_score"
			android:icon="@drawable/ic_menu_camera"
			android:title="@string/str_history_grade" />
		<item
			android:id="@+id/passed_score"
			android:icon="@drawable/ic_menu_gallery"
			android:title="@string/str_allpassed_grade" />
		<item
			android:id="@+id/unpassed_score"
			android:icon="@drawable/ic_menu_slideshow"
			android:title="@string/str_notpassed_grade" />
	</group>
	<item android:title="@string/str_menu_help">
		<menu>
			<item
				android:id="@+id/menu_about"
				android:icon="@drawable/ic_menu_share"
				android:title="@string/str_menu_about" />
			<item
				android:id="@+id/menu_exit"
				android:icon="@drawable/ic_menu_send"
				android:title="@string/str_menu_exit" />
		</menu>
	</item>
</menu>
