<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:padding="12dp"
	android:layout_margin="12dp"
	app:cardBackgroundColor="#5cea3bcc"
	app:cardCornerRadius="9dp">
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="3sp"
		android:orientation="vertical">
		<RelativeLayout
			android:id="@+id/spring"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="7dp">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/课程号"
					android:textColor="#000000"
					android:textSize="14sp" />
				<TextView
					android:id="@+id/课程号"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="3sp"
					android:text="@string/课程号示例"
					android:textColor="#000000"
					android:textSize="14sp" />
			</LinearLayout>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/summer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/spring"
			android:layout_alignParentStart="true"
			android:layout_marginStart="0dp"
			android:layout_marginTop="9dp">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:text="@string/课程名"
					android:textColor="#000000"
					android:textSize="14sp" />
				<ScrollView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<TextView
						android:id="@+id/课程名"
						android:layout_width="200dp"
						android:layout_height="42sp"
						android:layout_marginStart="3sp"
						android:gravity="center_vertical"
						android:singleLine="false"
						android:text="@string/课程名示例"
						android:textColor="#000000"
						android:textSize="14sp" />
				</ScrollView>
			</LinearLayout>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/autumn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginStart="10dp"
			android:layout_marginTop="6dp"
			android:layout_toEndOf="@id/spring">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/学期"
					android:textColor="#000000"
					android:textSize="14sp" />
				<TextView
					android:id="@+id/学期"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="3sp"
					android:text="@string/学期示例"
					android:textColor="#000000"
					android:textSize="14sp" />
			</LinearLayout>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/winter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/summer"
			android:layout_marginTop="5dp">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/成绩"
					android:textColor="#000000"
					android:textSize="20sp" />
				<TextView
					android:id="@+id/成绩"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="6sp"
					android:text="@string/成绩示例"
					android:textColor="#000000"
					android:textSize="20sp" />
			</LinearLayout>
		</RelativeLayout>
	</RelativeLayout>
</androidx.cardview.widget.CardView>
